Fix overflow problem

--- a/src/app/group/group.page.scss
+++ b/src/app/group/group.page.scss
@@ -9,6 +9,7 @@
   width: 100%;
   background-color: blue;
   height: 94%;
+  overflow-y: scroll;
 }
 .messageBox{
   margin-bottom: 1%;
@@ -17,7 +18,6 @@
   min-height: 5%;
   background-color: #3498DB;
   float: left;
-
   margin-left:1%;
   border-radius: 5%;
   border: 1px solid grey;
